--- a/dadi/index.html
+++ b/dadi/index.html
@@ -7,6 +7,12 @@
         <title>Dadi</title>
     </head>
     <body>
+        <div class="container" style="text-align: center; font-size: 2rem;">
+            <button onclick="throwdices()">Lancia i dadi!</button>
+            <p id="mine"></p>
+            <p id="pc"></p>
+            <p id="result"></p>
+        </div>
         <script src="../dadi/assets/main.js"></script>
     </body>
 </html>
